# subtitle-matcher

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
subtitle_matcher/: __init__.py  cli.py  encoding.py  matching.py  srt.py  subtitle.py  sync.py
tests/: test_cli.py  test_encoding.py  test_matching.py  test_srt.py  test_sync.py
